[gd_scene load_steps=4 format=3 uid="uid://cq44ssxtvf42p"]

[ext_resource type="PackedScene" uid="uid://cw5ferx1lu5me" path="res://Screens/MainNode.tscn" id="1_cvtxa"]
[ext_resource type="Script" path="res://Scripts/choose_lesson.gd" id="2_thhlo"]
[ext_resource type="Script" path="res://Scripts/MessageChooseLesson.gd" id="3_b3s0v"]

[node name="MainNode" groups=["Persist"] instance=ExtResource("1_cvtxa")]

[node name="WorkField" parent="." index="1"]
script = ExtResource("2_thhlo")

[node name="Button" type="Button" parent="WorkField" index="0"]
layout_mode = 2
size_flags_horizontal = 3
text = "Тема 1"

[node name="Button2" type="Button" parent="WorkField" index="1"]
layout_mode = 2
size_flags_horizontal = 3
text = "Тема 2"

[node name="Button3" type="Button" parent="WorkField" index="2"]
layout_mode = 2
size_flags_horizontal = 3
text = "Тема 3"

[node name="Button4" type="Button" parent="WorkField" index="3"]
layout_mode = 2
size_flags_horizontal = 3
text = "Тема 4"

[node name="Button5" type="Button" parent="WorkField" index="4"]
layout_mode = 2
size_flags_horizontal = 3
text = "Тема 5"

[node name="Button6" type="Button" parent="WorkField" index="5"]
layout_mode = 2
size_flags_horizontal = 3
text = "Тема 6"

[node name="HScrollBar" type="HScrollBar" parent="WorkField" index="6"]
layout_mode = 2

[node name="MessageBox" type="RichTextLabel" parent="ContainerLowerBar" index="0"]
layout_mode = 2
script = ExtResource("3_b3s0v")

[connection signal="mouse_entered" from="WorkField/Button" to="ContainerLowerBar/MessageBox" method="_on_button_mouse_entered"]
[connection signal="mouse_exited" from="WorkField/Button" to="ContainerLowerBar/MessageBox" method="_on_button_mouse_exited"]
[connection signal="pressed" from="WorkField/Button" to="WorkField" method="_on_button_pressed"]
[connection signal="mouse_entered" from="WorkField/Button2" to="ContainerLowerBar/MessageBox" method="_on_button_2_mouse_entered"]
[connection signal="mouse_exited" from="WorkField/Button2" to="ContainerLowerBar/MessageBox" method="_on_button_2_mouse_exited"]
[connection signal="pressed" from="WorkField/Button2" to="WorkField" method="_on_button_2_pressed"]
[connection signal="mouse_entered" from="WorkField/Button3" to="ContainerLowerBar/MessageBox" method="_on_button_3_mouse_entered"]
[connection signal="mouse_exited" from="WorkField/Button3" to="ContainerLowerBar/MessageBox" method="_on_button_3_mouse_exited"]
[connection signal="pressed" from="WorkField/Button3" to="WorkField" method="_on_button_3_pressed"]
[connection signal="mouse_entered" from="WorkField/Button4" to="ContainerLowerBar/MessageBox" method="_on_button_4_mouse_entered"]
[connection signal="mouse_exited" from="WorkField/Button4" to="ContainerLowerBar/MessageBox" method="_on_button_4_mouse_exited"]
[connection signal="pressed" from="WorkField/Button4" to="WorkField" method="_on_button_4_pressed"]
[connection signal="mouse_entered" from="WorkField/Button5" to="ContainerLowerBar/MessageBox" method="_on_button_5_mouse_entered"]
[connection signal="mouse_exited" from="WorkField/Button5" to="ContainerLowerBar/MessageBox" method="_on_button_5_mouse_exited"]
[connection signal="pressed" from="WorkField/Button5" to="WorkField" method="_on_button_5_pressed"]
[connection signal="mouse_entered" from="WorkField/Button6" to="ContainerLowerBar/MessageBox" method="_on_button_6_mouse_entered"]
[connection signal="mouse_exited" from="WorkField/Button6" to="ContainerLowerBar/MessageBox" method="_on_button_6_mouse_exited"]
[connection signal="pressed" from="WorkField/Button6" to="WorkField" method="_on_button_6_pressed"]
